# doc-to-lora

./: pyproject.toml
src/ctx_to_lora/: model_loading.py
src/ctx_to_lora/modeling/: aggregator.py  hypernet.py  idefics2.py  text_to_lora_impl.py
